# AiCoding

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AGENTS_FAST_PATH_V1.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  README_CN.md  README_EN.md  Taskfile.yml  go.mod  lychee.toml
.agent-memory/: DECISIONS.md
CodingKit/modules/common/controller/foc/: CMakeLists.txt  README.md
CodingKit/modules/common/controller/foc/docs/: design.md  encoding.md  flat_vf_if_design.md
CodingKit/modules/common/controller/foc/examples/: current_loop_example.c  flat_vf_if_example.c  minimal_example.c  motion_loop_example.c  open_loop_current_example.c  with_pid_controller_example.c
CodingKit/tests/ai-debug-kit/: README.md  pyproject.toml
CodingKit/tests/ai-debug-kit/.ai-debug/deployment/: active-profile.json  backends.json  smoke-test.json
CodingKit/tests/ai-debug-kit/.ai-debug/targets/: jlink-generic.json
CodingKit/tests/ai-debug-kit/docs/: ai-debug-kit-architecture.md
CodingKit/tests/ai-debug-kit/docs/references/: dss-datavisualizer.md
CodingKit/tests/ai-debug-kit/src/ai_debug/: __init__.py  __main__.py  cli.py
CodingKit/tests/ai-debug-kit/tests/: test_backend_registry.py  test_cli.py  test_cli_jlink.py  test_jlink_backend.py  test_simulator_backend.py  test_smoke_flow.py  test_target_shim_static.py
CodingKit/tools/windows-automation/visio-mcp/: .gitignore  MANIFEST.json  README.md  pyproject.toml  requirements-windows.txt
CodingKit/tools/windows-automation/visio-mcp/docs/: ARCHITECTURE.md  TEST_PLAN.md
CodingKit/tools/windows-automation/visio-mcp/examples/: generic-dual-loop-actuator-control.json  visio-mcp-architecture.json
CodingKit/tools/windows-automation/visio-mcp/schemas/: diagram.schema.json  renderer-effective-fields.json  style-profile.schema.json
CodingKit/tools/windows-automation/visio-mcp/scripts/: install.ps1  run-mcp.ps1  verify.ps1
CodingKit/tools/windows-automation/visio-mcp/styles/: style-profiles.json
CodingKit/tools/windows-automation/visio-mcp/tests/: test_connector_quality.py  test_layout_quality.py  test_mock_e2e.py  test_protocol.py  test_schema.py  test_security.py  test_style_profiles.py  test_visio_com_renderer.py
CodingKit/tools/windows-automation/visio-mcp/tools/: benchmark.py  quality_regression.py  visio_smoke.py
(+900 files in other folders)
