[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-debug-kit"
version = "0.2.0"
description = "Reusable host-side AI debug kit skeleton"
requires-python = ">=3.11"

[project.scripts]
ai-debug = "ai_debug.cli:main"

[project.optional-dependencies]
jlink = [
    "pylink-square>=2.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_debug*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
